# pt-nnergix

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: database.py  dependencies.py  main.py
app/config/: log.py  settings.py
app/mappers/: history_mapper.py  link_mapper.py
app/models/: history.py  link.py  scraper_run.py  url.py
app/repositories/: history_repository.py  scraper_run_repository.py  url_repository.py
app/routers/: history.py  scraper.py
app/schemas/: history.py  link.py  pagination.py  scraper_run.py  url.py
app/services/: history_service.py  scraper_service.py
migrations/: env.py
migrations/versions/: c847cc608f4b_init.py
tests/: conftest.py
tests/integration/: test_history_api.py  test_scraper_api.py  test_scraper_service.py
tests/unit/: test_url_repository.py
