[project]
name = "pt-nnergix"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4==4.15.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "lxml>=6.1.1",
    "psycopg2-binary>=2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlmodel==0.0.38",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
